--- a/CutomApiLib.csproj
+++ b/CutomApiLib.csproj
@@ -2,6 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>CustomApiLib</PackageId>
+    <Version>0.0.0.0</Version>
+    <Authors>Ben</Authors>
+    <Company>Ben</Company>
+    <Description>Mak response data and  to error message  same format</Description>
+    <PackageProjectUrl>https://github.com/Benknightdark/CustomApiResLib</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Benknightdark/CustomApiResLib</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <FileVersion>0.0.0.0</FileVersion>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
+    <PackageReleaseNotes>
+    Mak response data and  to error message  same format
+    Document => https://github.com/Benknightdark/CustomApiResLib
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
